--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Noah Naqvi's Resume">
+  <meta name="author" content="862432661">
 
-  <title>John Doe - Business Administration</title>
+  <title>Noah Naqvi - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/noahnaqvi.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,23 +61,23 @@
         <h1 class="mb-3">John Doe
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Noah Naqvi is a dedicated college student currently pursuing his degree at the University of California, Riverside (UCR). His commitment to excellence is evident in his academic achievements, having graduated from Paloma Valley High School with a stellar 4.2 GPA. Noah's passion for learning extends beyond the classroom as he actively engages in athletics and shares a deep enthusiasm for cars.<br><br>
 
-        Enter bio here<br><br>
+        Throughout his academic journey, Noah has demonstrated a remarkable work ethic and a thirst for knowledge. He consistently strives for excellence in every endeavor, whether it's excelling in his coursework or pursuing his interests in sports and automobiles. Noah's time management skills and ability to balance academics with extracurricular activities highlight his disciplined approach to life.<br><br>
 
-        Enter bio here
+        In addition to his academic pursuits, Noah is an accomplished athlete and a fervent car enthusiast. His dedication to fitness and sports not only reflects his physical prowess but also underscores his determination and competitive spirit. Noah's passion for cars goes beyond admiration; he actively engages in the automotive community, staying updated with the latest trends and technologies. His multifaceted interests and unwavering commitment make Noah Naqvi a promising individual with a bright future ahead.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/noah-naqvi-49a588308/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/noahnaqvi786">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/noah_naqvi/">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:nnaqv001@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,50 +92,68 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Used Car Salesman</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Nofa Autos</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Developed sales and negotiation<br> 
+              • Helped close over 20 deals in 1 year<br>
+              • Experience with HTML, and made advertisement websites<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2019 - October 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Athlete</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">PVHS Football</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Offensive line and defensive line captin<br>
+              • developed leadership/communicative skills<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2019 - Oct 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Arm Wrestling Club President</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Ran meetings to help club members learn and get better at their intrest of arm wrestling<br>
+            • Reviewed and judged peoples abilities organizizing them in groups of similar skillsets<br>
+            • Created educational content to help promote student education about arm wrestling<br>
+            • Developed many safety protocols to help members stay safe<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2023 - present</span>
           </div>
         </div>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">PLTW Pathway Completed</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Paloma Valley High</a></div>
+            <p>
+            • Specialized laboratory skills-DNA extraction, DNA gel electrophoresis, blood typing, fingerprint/hair analysis, applied math, microscopy, gram staining, and aseptic techniques<br>
+            • Helped Improve professional skills such as team collaboration, peer reviews, oral communication, writing, and project management skills.<br>
+            • Design process experience - used iterative design process to solve problems, and worked collaboratively on design teams<br>
+            • Emergency Skills - CPR trained, Turnikit trained, Suture Trained<br>
+
+          </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2023 - present</span>
+          </div>
+        </div>
+
 
 
 
@@ -151,23 +169,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Paloma Valley High School</h3>
+            <div class="subheading mb-3">Graduate</div>
+            <div>High School Diploma Achieved</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2019 - June 2023</span>
           </div>
         </div>
 
@@ -175,10 +182,10 @@
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Computer Science Applications</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - Present</span>
           </div>
         </div>
 
@@ -191,7 +198,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/A1.png" width="500px">
+            <img src="img/A2.png" width="500px"><br>
+            <img src="img/A3.png" width="500px">
+            <img src="img/A4.png" width="500px"><br>
         </center>
       </div>
     </section>
